--- a/life/global.less
+++ b/life/global.less
@@ -7,6 +7,31 @@ body {
 }
 #main {
 	overflow: hidden;
+	position: relative;
+}
+#overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.85);
+	z-index: 20;
+	.information {
+		width: 600px;
+		margin: 0 auto;
+		margin-top: 200px;
+		background: #f2f2f2;
+		padding: 20px;
+		line-height: 20px;
+		a {
+			color: #495994;
+			text-decoration: none;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
 }
 #main-inner {
 	overflow: hidden;
@@ -18,6 +43,16 @@ body {
 	height: 100%;
 	z-index: 10;
 	background: #333;
+	.link {
+		display: block;
+		text-align: center;
+		color: white;
+		text-decoration: none;
+		padding: 10px 0;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 	.button {
 		margin: 15px;
 		display: block;
